<resources>
    <string name="app_name">Simple HRV</string>
    <string name="happy_monday">Happy Monday!</string>
    <string name="you_haven_t_taken_your_survey_yet_tap_below_to_start">You haven’t taken your survey yet, tap below to start!</string>
    <string name="start_now">Start Now!</string>
    <string name="tap_start_now_and_leave_the_sensor">Tap Start now and leave the sensor on for 1 minute</string>
    <string name="start_wellness_survey">Start Wellness Survey</string>
    <string name="start_heart_rate_analysis">Start Heart Rate Analysis</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="bpm">-- bpm</string>
    <string name="hrv">HRV</string>
    <string name="_00">00</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="_00_00">00:00</string>
    <string name="an_image_of_a_heart">An Image of a heart</string>
    <string name="sleep_analysis">Sleep Analysis</string>
    <string name="next">NEXT</string>
    <string name="low">Low</string>
    <string name="_10">10</string>
    <string name="_1">1</string>
    <string name="how_would_you_rate_your_sleep_last_night">How would you rate your sleep last night?</string>
    <string name="about">About</string>
    <string name="high">High</string>
    <string name="l">L</string>
    <string name="quantity">Quantity</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>
