<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appBackground">

        <TextView
            android:id="@+id/surveyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/muli_bold"
            android:text="@string/sleep_analysis"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/how_would_you_rate_your_sleep_last_night"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surveyTitle"
            app:layout_constraintVertical_bias="0.57" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/nextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/surveyTitle"
            app:layout_constraintVertical_bias="0.71000004">

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="316dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="fill"
                android:orientation="horizontal"
                android:paddingStart="18dp"
                android:paddingEnd="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="23dp"
                    tools:layout_editor_absoluteY="358dp">

                    <TextView
                        android:id="@+id/lowLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/_1"
                        android:textSize="18sp"
                        tools:layout_editor_absoluteX="50dp"
                        tools:layout_editor_absoluteY="372dp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/low"
                        android:textSize="18sp"
                        tools:layout_editor_absoluteX="313dp"
                        tools:layout_editor_absoluteY="372dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="vertical"
                    android:paddingStart="0dp"
                    android:paddingEnd="15sp"
                    tools:layout_editor_absoluteX="362dp"
                    tools:layout_editor_absoluteY="358dp">

                    <TextView
                        android:id="@+id/highLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/_10"
                        android:textSize="18sp"
                        tools:layout_editor_absoluteX="50dp"
                        tools:layout_editor_absoluteY="372dp" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/high"
                        android:textSize="18sp"
                        tools:layout_editor_absoluteX="313dp"
                        tools:layout_editor_absoluteY="372dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:height="30pt"
            android:fontFamily="@font/muli_bold"
            android:text="@string/next"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>